<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GameConfig">
    <!-- num celdas -->
    <TextView
        android:id="@+id/seekBarXtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/seekBarX"
        android:max = "6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/seekBarYtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/seekBarY"
        android:max="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/seekBarColorstxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/seekBarColors"
        android:max="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!-- Contenido -->
    <RadioGroup
        android:id="@+id/radioGroup01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/radio_color"
            android:id="@+id/radioButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/radio_number"
            android:id="@+id/radioButtonN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        </RadioGroup>
    <!-- otras opciones -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:text="@string/check_sound"
            android:id="@+id/checkBoxSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:text="@string/check_vibrate"
            android:id="@+id/checkBoxVibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
    <Button
        android:text="@string/startPlay"
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|fill_horizontal|center"
        android:layout_gravity="center_horizontal|center"/>

</LinearLayout>
